# data_curator

./: README.md  pyproject.toml
experiments/: compare_models.py  curate_dataset.py  curated_curriculum_training.py  curated_training.py  noncurated_training.py
src/datacurator/: __init__.py  core.py
